alignment issues

--- a/src/app/user_assign/user_assign.component.scss
+++ b/src/app/user_assign/user_assign.component.scss
@@ -21,3 +21,7 @@
     padding: 0px;
     margin: 0px;
 }
+
+.form-horizontal .control-label {
+    padding-top: 0px;
+}
